# multimodal-rag

./: .gitignore  README.md  app.py  environment.yaml  pyproject.toml
configs/: default.yaml
notebooks/: exploration.ipynb
scripts/: download_data.sh  evaluate.py  index_regions.py  process_documents.py  train_retriever.py
src/document/: layout.py  parser.py
src/generator/: local_vl.py  mllm.py
src/retriever/: baseline.py  custom.py  evaluate.py
src/training/: dataset.py  losses.py  train.py
src/vectordb/: store.py
